# jpassende

./: LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml
jpassende/: __init__.py  _version.py  core.py  datatypes.py  enums.py  exceptions.py  utils.py
jpassende/mixins/: __init__.py  aead.py  block.py  derivation.py  stream.py
tests/: 1test.py
