[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpassende"
version = "1.0.0"
description = "High-Performance Cryptographic Library with Custom Patterns"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "J Code"}
]
keywords = [
    "cryptography",
    "encryption",
    "security",
    "aead",
    "stream-cipher",
    "block-cipher",
    "key-derivation",
    "high-performance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.8"
dependencies = [
    "pycryptodome>=3.18.0",
]

[project.urls]
Homepage = "https://github.com/JCode-JCode/jpassende"
Repository = "https://github.com/JCode-JCode/jpassende"

[tool.setuptools.packages.find]
where = ["."]
include = ["jpassende", "jpassende.*"]